--- a/src/app/projects/moving/interactive-text.module.css
+++ b/src/app/projects/moving/interactive-text.module.css
@@ -4,23 +4,19 @@
     align-items: center;
     position: relative;
     width: 100%;
-    height: 60vh;
-    padding: 0 5vw;
-    /* Add padding to prevent clipping at edges */
+    height: 100vh;
+    padding: 0;
     overflow: visible;
-    /* Allow overflow so letters don't get cut off */
     user-select: none;
 }
 
 .letter {
     display: inline-block;
-    font-size: 15vw;
-    /* kept as is, creates approx 80-90% width */
+    font-size: clamp(5rem, 19vw, 18rem);
+    line-height: 0.88;
     font-family: var(--font-montserrat), "Montserrat", sans-serif;
     font-weight: 900;
     color: #333;
-    /* Dark gray */
-    /* -webkit-text-stroke: 2px rgba(255, 255, 255, 0.8); removed stroke */
     position: relative;
     z-index: 10;
     cursor: default;
@@ -29,6 +25,4 @@
 
 .letter:hover {
     color: #111;
-    /* Even darker on hover */
-    /* -webkit-text-stroke: 2px #fff; */
 }
